--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -32,6 +32,7 @@
         <module>amazon-sqs</module>
         <module>amazon-sdb</module>
         <module>amazon-ec2-bootstrapper</module>
+        <module>amazon-ec2-discovery</module>
         <module>amazon-ec2-provisioner</module>
         <module>private-lan-provisioner</module>
         <!--module>elastic-grid-oar</module-->
