--- a/platforms/private-lan-platform/config/eg-cli.logging.properties
+++ b/platforms/private-lan-platform/config/eg-cli.logging.properties
@@ -1,3 +1,5 @@
-handlers=org.slf4j.bridge.SLF4JBridgeHandler
+handlers=java.util.logging.ConsoleHandler
 
 .level=WARNING
+com.elasticgrid.level=INFO
+org.springframework.level=SEVERE
