Updated JiBX to version 1.2.1.
git-svn-id: svn+ssh://svn.forge.objectweb.org/svnroot/elastic-grid/trunk@446 e25e3cd6-ff2c-412d-a5cc-22119c6ca403

--- a/pom.xml
+++ b/pom.xml
@@ -191,7 +191,7 @@
             <dependency>
                 <groupId>org.jibx</groupId>
                 <artifactId>jibx-run</artifactId>
-                <version>1.1.6a</version>
+                <version>1.2.1</version>
                 <exclusions>
                     <exclusion>
                         <groupId>stax</groupId>
@@ -202,7 +202,7 @@
             <dependency>
                 <groupId>org.jibx</groupId>
                 <artifactId>jibx-extras</artifactId>
-                <version>1.1.6a</version>
+                <version>1.2.1</version>
             </dependency>
             <dependency>
                 <groupId>javax.xml.stream</groupId>
