--- a/applications/rest-api/pom.xml
+++ b/applications/rest-api/pom.xml
@@ -156,6 +156,10 @@
             <version>2.4</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring</artifactId>
+        </dependency>
 
     </dependencies>
 
