--- a/platforms/private-lan-platform/pom.xml
+++ b/platforms/private-lan-platform/pom.xml
@@ -22,6 +22,13 @@
 			<version>${pom.version}</version>
 		</dependency>
 
+        <!-- Core Services dependencies -->
+        <dependency>
+            <groupId>${pom.groupId}</groupId>
+            <artifactId>cluster-manager-jsb</artifactId>
+            <version>${pom.version}</version>
+        </dependency>
+
         <!-- Substrates dependencies -->
 		<!--<dependency>-->
 			<!--<groupId>com.elasticgrid.substrates</groupId>-->
