Improved CPM packaging (now shipping both an implementation JAR and a downloadable JAR).

--- a/platforms/private-lan-platform/pom.xml
+++ b/platforms/private-lan-platform/pom.xml
@@ -32,6 +32,25 @@
             <groupId>${pom.groupId}</groupId>
             <artifactId>private-lan-cloud-platform</artifactId>
             <version>${pom.version}</version>
+            <classifier>impl</classifier>
+        </dependency>
+        <dependency>
+            <groupId>${pom.groupId}</groupId>
+            <artifactId>private-lan-cloud-platform</artifactId>
+            <version>${pom.version}</version>
+            <classifier>dl</classifier>
+        </dependency>
+        <dependency>
+            <groupId>${pom.groupId}</groupId>
+            <artifactId>amazon-ec2-cloud-platform</artifactId>
+            <version>${pom.version}</version>
+            <classifier>impl</classifier>
+        </dependency>
+        <dependency>
+            <groupId>${pom.groupId}</groupId>
+            <artifactId>amazon-ec2-cloud-platform</artifactId>
+            <version>${pom.version}</version>
+            <classifier>dl</classifier>
         </dependency>
 
         <!-- Substrates dependencies -->
