--- a/modules/amazon-ec2-cloud-platform/pom.xml
+++ b/modules/amazon-ec2-cloud-platform/pom.xml
@@ -8,7 +8,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>amazon-ec2-cloud-platform</artifactId>
-    <packaging>jar</packaging>
+    <packaging>jsb</packaging>
     <name>Modules :: Amazon EC2 Cloud Platform (JSB)</name>
 
     <dependencies>
@@ -98,6 +98,30 @@
                             <addExtensions/>
                         </manifest>
                     </archive>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-rio-plugin</artifactId>
+                <version>4.0-M3-SNAPSHOT</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <environment>
+                        <rio.home>${env.RIO_HOME}</rio.home>
+                        <jini.home>${env.JINI_HOME}</jini.home>
+                    </environment>
+                    <implementationIns>
+                        <implementationIn>com.elasticgrid.platforms.ec2</implementationIn>
+                    </implementationIns>
+                    <implementationTopclasses>
+                        <implementationTopclass>com.elasticgrid.platforms.ec2.EC2CloudPatformManagerJSB</implementationTopclass>
+                    </implementationTopclasses>
+                    <downloadableIns>
+                        <downloadableIn>com.elasticgrid.platforms.ec2</downloadableIn>
+                    </downloadableIns>
+                    <downloadableTopclasses>
+                        <downloadableTopclass>com.elasticgrid.platforms.ec2.EC2CloudPlatformManager</downloadableTopclass>
+                    </downloadableTopclasses>
                 </configuration>
             </plugin>
         </plugins>
