--- a/modules/private-lan-cloud-platform/pom.xml
+++ b/modules/private-lan-cloud-platform/pom.xml
@@ -8,7 +8,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>private-lan-cloud-platform</artifactId>
-    <packaging>jar</packaging>
+    <packaging>jsb</packaging>
     <name>Modules :: Private LAN Cloud Platform (JSB)</name>
 
     <dependencies>
@@ -89,15 +89,26 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
+                <artifactId>maven-rio-plugin</artifactId>
+                <version>4.0-M3-SNAPSHOT</version>
+                <extensions>true</extensions>
                 <configuration>
-                    <archive>
-                        <index>true</index>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                            <addExtensions/>
-                        </manifest>
-                    </archive>
+                    <environment>
+                        <rio.home>${env.RIO_HOME}</rio.home>
+                        <jini.home>${env.JINI_HOME}</jini.home>
+                    </environment>
+                    <implementationIns>
+                        <implementationIn>com.elasticgrid.platforms.lan</implementationIn>
+                    </implementationIns>
+                    <implementationTopclasses>
+                        <implementationTopclass>com.elasticgrid.platforms.lan.LANCloudPatformManagerJSB</implementationTopclass>
+                    </implementationTopclasses>
+                    <downloadableIns>
+                        <downloadableIn>com.elasticgrid.platforms.lan</downloadableIn>
+                    </downloadableIns>
+                    <downloadableTopclasses>
+                        <downloadableTopclass>com.elasticgrid.platforms.lan.LANCloudPlatformManager</downloadableTopclass>
+                    </downloadableTopclasses>
                 </configuration>
             </plugin>
         </plugins>
