Fixed EC2 Scaling Policy Handler classpath issues. Fixing bugs in EC2 Scaling Policy Handler.

--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -39,6 +39,7 @@
         <!--module>examples</module-->
         <module>jabber-cli</module>
         <!--module>jxta-discovery</module-->
+	<module>elastic-grid-deploy-handlers</module>
     </modules>
 
     <reporting>
