--- a/modules/elastic-grid-deploy-handlers/pom.xml
+++ b/modules/elastic-grid-deploy-handlers/pom.xml
@@ -7,10 +7,10 @@
 	    <version>0.9.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>amazon-ec2-provisioner</artifactId>
+    <artifactId>elastic-grid-deploy-handlers</artifactId>
     <!--<packaging>jsb</packaging>-->
     <packaging>jar</packaging>
-    <name>Modules :: Amazon EC2 Provisioner</name>
+    <name>Modules :: Elastic Grid Deploy Handlers</name>
 
     <dependencies>
 
@@ -18,20 +18,6 @@
         <dependency>
             <groupId>${pom.groupId}</groupId>
             <artifactId>amazon-ec2-discovery</artifactId>
-            <version>${pom.version}</version>
-        </dependency>
-
-        <!-- Elastic Grid manager -->
-        <dependency>
-            <groupId>${pom.groupId}</groupId>
-            <artifactId>elastic-grid-manager</artifactId>
-            <version>${pom.version}</version>
-        </dependency>
-
-        <!-- Elastic Grid model -->
-        <dependency>
-            <groupId>${pom.groupId}</groupId>
-            <artifactId>elastic-grid-model</artifactId>
             <version>${pom.version}</version>
         </dependency>
 
@@ -49,19 +35,6 @@
             <version>${pom.version}</version>
         </dependency>
 
-        <!-- Typica dependencies -->
-        <dependency>
-            <groupId>com.google.code.typica</groupId>
-            <artifactId>typica</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-impl</artifactId>
-        </dependency>
         <!-- Amazon S3 integration -->
         <dependency>
             <groupId>net.java.dev.jets3t</groupId>
@@ -78,6 +51,10 @@
         <dependency>
             <groupId>org.rioproject</groupId>
             <artifactId>rio</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.rioproject</groupId>
+            <artifactId>monitor</artifactId>
         </dependency>
 
     </dependencies>
