Introduced association between Cloud Manager and Cloud Platform Managers.

--- a/platforms/private-lan-platform/pom.xml
+++ b/platforms/private-lan-platform/pom.xml
@@ -27,6 +27,7 @@
             <groupId>${pom.groupId}</groupId>
             <artifactId>cluster-manager-jsb</artifactId>
             <version>${pom.version}</version>
+            <classifier>impl</classifier>
         </dependency>
         <dependency>
             <groupId>${pom.groupId}</groupId>
