--- a/modules/cluster-manager-jsb/pom.xml
+++ b/modules/cluster-manager-jsb/pom.xml
@@ -8,7 +8,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>cluster-manager-jsb</artifactId>
-    <packaging>jar</packaging>
+    <packaging>jsb</packaging>
     <name>Modules :: Cluster Manager (JSB)</name>
 
     <dependencies>
@@ -44,6 +44,7 @@
     </dependencies>
 
     <build>
+        <finalName>cluster-manager-${pom.version}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -80,17 +81,43 @@
                     </execution>
                 </executions>
             </plugin>
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-jar-plugin</artifactId>-->
+                <!--<configuration>-->
+                    <!--<archive>-->
+                        <!--<index>true</index>-->
+                        <!--<manifest>-->
+                            <!--<addClasspath>true</addClasspath>-->
+                            <!--<addExtensions/>-->
+                        <!--</manifest>-->
+                    <!--</archive>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
+                <artifactId>maven-rio-plugin</artifactId>
+                <version>4.0-M3-SNAPSHOT</version>
+                <extensions>true</extensions>
                 <configuration>
-                    <archive>
-                        <index>true</index>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                            <addExtensions/>
-                        </manifest>
-                    </archive>
+                    <environment>
+                        <rio.home>${env.RIO_HOME}</rio.home>
+                        <jini.home>${env.JINI_HOME}</jini.home>
+                    </environment>
+                    <implementationIns>
+                        <implementationIn>com.elasticgrid.cluster</implementationIn>
+                    </implementationIns>
+                    <implementationTopclasses>
+                        <implementationTopclass>com.elasticgrid.cluster.ClusterManagerJSB</implementationTopclass>
+                        <implementationTopclass>com.elasticgrid.cluster.ClusterManagerJSB$CloudPlatformManagerListener</implementationTopclass>
+                    </implementationTopclasses>
+                    <!--<downloadableIns>-->
+                        <!--<downloadableIn>com.elasticgrid.cluster</downloadableIn>-->
+                    <!--</downloadableIns>-->
+                    <!--<downloadableTopclasses>-->
+                        <!--<downloadableTopclass>com.elasticgrid.platforms.ec2.EC2CloudPlatformManager</downloadableTopclass>-->
+                        <!--<downloadableTopclass>com.elasticgrid.platforms.ec2.EC2CloudPlatformManagerProxy</downloadableTopclass>-->
+                    <!--</downloadableTopclasses>-->
                 </configuration>
             </plugin>
         </plugins>
