Introduced a watch monitoring the number of running clusters.

--- a/modules/private-lan-cloud-platform/pom.xml
+++ b/modules/private-lan-cloud-platform/pom.xml
@@ -102,6 +102,7 @@
                     </implementationIns>
                     <implementationTopclasses>
                         <implementationTopclass>com.elasticgrid.platforms.lan.LANCloudPatformManagerJSB</implementationTopclass>
+                        <implementationTopclass>com.elasticgrid.platforms.lan.LANCloudPatformManagerJSB$1</implementationTopclass>
                         <implementationTopclass>com.elasticgrid.platforms.lan.LANCloudPlatformManagerProxy</implementationTopclass>
                     </implementationTopclasses>
                     <downloadableIns>
