Initial work on a calculator slow client.

--- a/examples/calculator/pom.xml
+++ b/examples/calculator/pom.xml
@@ -15,6 +15,7 @@
     <modules>
         <module>calculator1</module>
         <module>calculator2</module>
+        <module>calculator-slow-client</module>
     </modules>
 
 </project>
