--- a/examples/calculator/calculator-fast-client/pom.xml
+++ b/examples/calculator/calculator-fast-client/pom.xml
@@ -7,9 +7,9 @@
         <version>0.9.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>calculator-slow-client</artifactId>
+    <artifactId>calculator-fast-client</artifactId>
     <packaging>jar</packaging>
-    <name>Examples :: Calculator :: Slow Client</name>
+    <name>Examples :: Calculator :: Fast Client</name>
 
     <dependencies>
 
