--- a/modules/elastic-grid-cli/pom.xml
+++ b/modules/elastic-grid-cli/pom.xml
@@ -18,6 +18,25 @@
             <groupId>${pom.groupId}</groupId>
             <artifactId>elastic-grid-manager</artifactId>
             <version>${pom.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>net.java.dev.jets3t</groupId>
+                    <artifactId>jets3t</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <!-- Elastic Grid Storage dependencies -->
+        <dependency>
+            <groupId>${pom.groupId}</groupId>
+            <artifactId>elastic-grid-storage</artifactId>
+            <version>${pom.version}</version>
+        </dependency>
+        <!-- TODO: get rid of this "hack"! -->
+        <dependency>
+            <groupId>${pom.groupId}</groupId>
+            <artifactId>amazon-s3-storage</artifactId>
+            <version>${pom.version}</version>
         </dependency>
 
         <!-- Elastic Grid Utils -->
@@ -25,6 +44,12 @@
             <groupId>${pom.groupId}</groupId>
             <artifactId>elastic-grid-utils</artifactId>
             <version>${pom.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>net.java.dev.jets3t</groupId>
+                    <artifactId>jets3t</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <!-- Elastic Grid EC2 provisioner -->
@@ -32,6 +57,12 @@
             <groupId>${pom.groupId}</groupId>
             <artifactId>amazon-ec2-provisioner</artifactId>
             <version>${pom.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>net.java.dev.jets3t</groupId>
+                    <artifactId>jets3t</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <!-- Elastic Grid EC2 provisioner -->
         <dependency>
@@ -63,12 +94,6 @@
             <groupId>com.noelios.restlet</groupId>
             <artifactId>com.noelios.restlet</artifactId>
             <version>${restlet-release-version}</version>
-        </dependency>
-
-        <!-- Amazon S3 dependencies -->
-        <dependency>
-            <groupId>net.java.dev.jets3t</groupId>
-            <artifactId>jets3t</artifactId>
         </dependency>
 
         <!-- Command line parsing -->
