Added initial tests for Elastic Grid Storage implementations.

--- a/modules/amazon-s3-storage/pom.xml
+++ b/modules/amazon-s3-storage/pom.xml
@@ -26,6 +26,15 @@
             <artifactId>jets3t</artifactId>
         </dependency>
 
+        <!-- Tests dependencies -->
+        <dependency>
+            <groupId>${pom.groupId}</groupId>
+            <artifactId>elastic-grid-storage</artifactId>
+            <version>${pom.version}</version>
+            <classifier>tests</classifier>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
