--- a/modules/mosso-cloudfiles-storage/pom.xml
+++ b/modules/mosso-cloudfiles-storage/pom.xml
@@ -27,6 +27,15 @@
             <version>1.3.0</version>
         </dependency>
 
+        <!-- Tests dependencies -->
+        <dependency>
+            <groupId>${pom.groupId}</groupId>
+            <artifactId>elastic-grid-storage</artifactId>
+            <version>${pom.version}</version>
+            <classifier>tests</classifier>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
