--- a/modules/rackspace-cloudfiles-storage/pom.xml
+++ b/modules/rackspace-cloudfiles-storage/pom.xml
@@ -7,9 +7,9 @@
         <version>0.9.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>mosso-cloudfiles-storage</artifactId>
+    <artifactId>rackspace-cloudfiles-storage</artifactId>
     <packaging>jar</packaging>
-    <name>Modules :: Moss Cloud Files Storage</name>
+    <name>Modules :: Rackspace Cloud Files Storage</name>
 
     <dependencies>
 
@@ -25,6 +25,11 @@
             <groupId>com.mosso</groupId>
             <artifactId>cloud-files</artifactId>
             <version>1.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.13</version>
         </dependency>
 
         <!-- Tests dependencies -->
