Complete Rackspace CloudFiles storage implementation. Added access to underlying streams of storages.

--- a/modules/rackspace-cloudfiles-storage/src/main/resources/log4j.properties
+++ b/modules/rackspace-cloudfiles-storage/src/main/resources/log4j.properties
@@ -32,7 +32,7 @@
 # Realistically you only ever want to swap between the two log level below
 #################################################################################
 #log4j.rootCategory=DEBUG, R, X
-log4j.rootCategory=INFO, R
+log4j.rootCategory=DEBUG, R
 #log4j.rootCategory=INFO, R
 #################################################################################
 
