--- a/applications/rest-api/pom.xml
+++ b/applications/rest-api/pom.xml
@@ -19,6 +19,12 @@
             <groupId>com.elasticgrid</groupId>
             <artifactId>amazon-ec2-provisioner</artifactId>
             <version>${pom.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>net.java.dev.jets3t</groupId>
+                    <artifactId>jets3t</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
 		<!-- Elastic Grid LAN provisioner -->
@@ -32,6 +38,18 @@
         <dependency>
             <groupId>com.elasticgrid</groupId>
             <artifactId>elastic-grid-manager</artifactId>
+            <version>${pom.version}</version>
+        </dependency>
+
+        <!-- Elastic Grid Storage -->
+        <dependency>
+            <groupId>com.elasticgrid</groupId>
+            <artifactId>elastic-grid-storage</artifactId>
+            <version>${pom.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.elasticgrid</groupId>
+            <artifactId>amazon-s3-storage</artifactId>
             <version>${pom.version}</version>
         </dependency>
 
