--- a/applications/rest-api/pom.xml
+++ b/applications/rest-api/pom.xml
@@ -51,6 +51,13 @@
             <groupId>com.elasticgrid</groupId>
             <artifactId>amazon-s3-storage</artifactId>
             <version>${pom.version}</version>
+            <!--<scope>provided</scope>-->
+        </dependency>
+        <dependency>
+            <groupId>com.elasticgrid</groupId>
+            <artifactId>rackspace-cloudfiles-storage</artifactId>
+            <version>${pom.version}</version>
+            <!--<scope>provided</scope>-->
         </dependency>
 
         <!-- Elastic Grid Model -->
