Renamed StorageManager into StorageEngine so that a real StorageManager using (many?) StorageEngine(s) can be introduced as a JSB.

--- a/modules/amazon-s3-storage/pom.xml
+++ b/modules/amazon-s3-storage/pom.xml
@@ -29,7 +29,7 @@
         <!-- Tests dependencies -->
         <dependency>
             <groupId>${pom.groupId}</groupId>
-            <artifactId>elastic-grid-storage</artifactId>
+            <artifactId>elastic-grid-manager</artifactId>
             <version>${pom.version}</version>
             <classifier>tests</classifier>
             <scope>test</scope>
