--- a/modules/cluster-manager/pom.xml
+++ b/modules/cluster-manager/pom.xml
@@ -7,7 +7,7 @@
         <version>0.9.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>cluster-manager-jsb</artifactId>
+    <artifactId>cluster-manager</artifactId>
     <packaging>jsb</packaging>
     <name>Modules :: Cluster Manager (JSB)</name>
 
