--- a/modules/elastic-grid-storage/pom.xml
+++ b/modules/elastic-grid-storage/pom.xml
@@ -8,35 +8,43 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>elastic-grid-storage</artifactId>
-    <packaging>jar</packaging>
-    <name>Modules :: Elastic Grid Storage</name>
+    <packaging>jsb</packaging>
+    <name>Modules :: Storage Manager (JSB)</name>
 
     <dependencies>
 
-        <!-- Elastic Grid model -->
+        <!-- Elastic Grid Manager -->
         <dependency>
             <groupId>${pom.groupId}</groupId>
             <artifactId>elastic-grid-manager</artifactId>
             <version>${pom.version}</version>
         </dependency>
 
-        <!-- Elastic Grid Utils -->
-        <!--<dependency>-->
-            <!--<groupId>${pom.groupId}</groupId>-->
-            <!--<artifactId>elastic-grid-utils</artifactId>-->
-            <!--<version>${pom.version}</version>-->
-        <!--</dependency>-->
+        <!-- Amazon S3 storage engine -->
+        <dependency>
+            <groupId>${pom.groupId}</groupId>
+            <artifactId>amazon-s3-storage</artifactId>
+            <version>${pom.version}</version>
+        </dependency>
+
+        <!-- Rackspace CloudFiles storage engine -->
+        <dependency>
+            <groupId>${pom.groupId}</groupId>
+            <artifactId>rackspace-cloudfiles-storage</artifactId>
+            <version>${pom.version}</version>
+        </dependency>
 
         <!-- Rio dependencies -->
-        <!--<dependency>-->
-            <!--<groupId>org.rioproject</groupId>-->
-            <!--<artifactId>rio</artifactId>-->
-            <!--<scope>provided</scope>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.rioproject</groupId>
+            <artifactId>rio</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
     </dependencies>
 
     <build>
+        <finalName>elastic-grid-storage-manager-${pom.version}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -72,7 +80,45 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>            
+            </plugin>
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-jar-plugin</artifactId>-->
+                <!--<configuration>-->
+                    <!--<archive>-->
+                        <!--<index>true</index>-->
+                        <!--<manifest>-->
+                            <!--<addClasspath>true</addClasspath>-->
+                            <!--<addExtensions/>-->
+                        <!--</manifest>-->
+                    <!--</archive>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-rio-plugin</artifactId>
+                <version>4.0-M3-SNAPSHOT</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <environment>
+                        <rio.home>${env.RIO_HOME}</rio.home>
+                        <jini.home>${env.JINI_HOME}</jini.home>
+                    </environment>
+                    <implementationIns>
+                        <implementationIn>com.elasticgrid.storage</implementationIn>
+                    </implementationIns>
+                    <implementationTopclasses>
+                        <implementationTopclass>com.elasticgrid.storage.StorageManagerJSB</implementationTopclass>
+                    </implementationTopclasses>
+                    <!--<downloadableIns>-->
+                        <!--<downloadableIn>com.elasticgrid.cluster</downloadableIn>-->
+                    <!--</downloadableIns>-->
+                    <!--<downloadableTopclasses>-->
+                        <!--<downloadableTopclass>com.elasticgrid.platforms.ec2.EC2CloudPlatformManager</downloadableTopclass>-->
+                        <!--<downloadableTopclass>com.elasticgrid.platforms.ec2.EC2CloudPlatformManagerProxy</downloadableTopclass>-->
+                    <!--</downloadableTopclasses>-->
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
